--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ShangyuKo.github.io/my-roller-skate",
   "name": "my-roller-skate",
   "version": "0.1.0",
   "private": true,
