--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.13",
     "axios": "^0.21.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "i18next": "^21.2.3",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.12.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "styled-components": "^5.3.1",
+    "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -42,6 +48,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.26",
+    "@types/react-router-dom": "^5.3.0",
+    "@types/styled-components": "^5.1.14",
     "gh-pages": "^3.2.3"
   }
 }
