--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next": "^21.2.3",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
+    "react-aspera-connect": "^0.1.11",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.12.0",
@@ -28,6 +29,8 @@
     "styled-components": "^5.3.1",
     "sync-mysql": "^3.0.1",
     "typescript": "^4.4.3",
+    "unique-string": "^3.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
