--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chec/commerce.js": "^2.8.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.3",
     "@stripe/react-stripe-js": "^1.5.0",
     "@stripe/stripe-js": "^1.19.0",
     "@testing-library/jest-dom": "^5.14.1",
