--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.0.3",
@@ -18,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "i18next": "^21.2.3",
+    "material-ui-icons": "^1.0.0-beta.36",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-aspera-connect": "^0.1.11",
