--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "request": "^2.88.2",
     "styled-components": "^5.3.1",
     "sync-mysql": "^3.0.1",
     "typescript": "^4.4.3",
